add music, improved animation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Diver Rescue</title>
+        <title>Rescue Diver</title>
         <meta charset='utf-8' />
 		<script type="text/javascript" src="script.js"></script>
         <style>
